<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.frag.QuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grad"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textProgress"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/signika"
            android:gravity="center"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Question 1 of 10" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_timer"
            android:gravity="center"
            android:textColor="#C62828"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/gray"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textProgress" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgFlag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/flag_image"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textQuestion"
            app:shapeAppearance="@style/rectangle"
            tools:srcCompat="@drawable/be" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded"
            android:maxLength="300"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/text_dark"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded"
            android:maxLength="300"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="invisible"
            app:backgroundTint="@color/text_dark"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imgFlag">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbOptOne"
                style="@style/CustomRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Germany"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbOptTwo"
                style="@style/CustomRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Algeria"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbOptThree"
                style="@style/CustomRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Nederland"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbOptFour"
                style="@style/CustomRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Finland"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>